syntax = "proto3";

package notificationapi;

import "google/api/annotations.proto";

service Notification {
    rpc SendEmail (SendEmailRequest) returns (SendEmailReply) {
        option (google.api.http) = {
            post: "/api/notification/email",
            body: "email"

        };
    }
    rpc SendSms (SendSmsRequest) returns (SendSmsReply) {
        option (google.api.http) = {
            post: "/api/notification/sms",
            body: "sms"
        };
    }
    rpc GetNotificationStatus (GetNotificationStatusRequest) returns (GetNotificationStatusReply) {
        option (google.api.http) = {
            get: "/api/notification/status/{notificationUid}"
        };
    }
}

message SendEmailRequest {
    EmailMessage email = 1;
}

message EmailMessage {
    string recipientEmailAddress = 1;
    string subject = 2;
    string body = 3;
}

message SendEmailReply {
    string NotificationUid = 1;
    Error error = 2;
}

message SendSmsRequest {
    SmsMessage sms = 1;
}

message SmsMessage {
    string recipientPhoneNumber = 1;
    string body = 2;
}

message SendSmsReply {
    string NotificationUid = 1;
    Error error = 2;
}

message GetNotificationStatusRequest {
    string notificationUid = 1;
}

message GetNotificationStatusReply {
    NotificationStatus status = 1;
    Error error = 2;
}

enum NotificationStatus {
    UNKNOWN = 0;
    SENT = 1;
    PENDING = 2;
    FAILED = 3;
}

message Error {
    int32 code = 1;
    string message = 2;
}