syntax = "proto3";

package patientinfoapi;

option go_package = "github.com/MarcGrol/go-training/solutions/hospital/patients/patientinfoapi";

service PatientInfo {
  rpc GetPatientOnUid (GetPatientOnUidRequest) returns (GetPatientOnUidReply) {}
}

message GetPatientOnUidRequest {
  string patientUid = 1;
}

message GetPatientOnUidReply {
  Patient patient = 1;
}

message Patient {
  string uid = 1;
  string fullName = 2;
  string addressLine = 3;
  string phoneNumber = 4;
  string emailAddress = 5;
}
